add bashrc for ease of use

--- a/cv-layout.tex
+++ b/cv-layout.tex
@@ -127,9 +127,4 @@
     \certifications
 
 \section{Other Qualifications}
-    \otherqualifications %\\
-%    \vspace{\parskip}       
-
-%\section{Bachelor Thesis @ CERN}
-%    \bachelorthesis \\
-%    \vspace{\parskip}
+    \otherqualifications
